# user

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  INSTALLATION_PLAN.md  OPERATIONS.md  README.md  RELEASE_NOTES.md  SECURITY.md  UPGRADE_NOTES.md  alembic.ini  openapi.json  pyproject.toml  railway.toml
.github/workflows/: publish-cdp-user-runtime.yml  service-build-push.yml  service-ci.yml
policies/: default.cedar  policy.cedar
roles/: README.md  default.json
src/: app.py  gunicorn.py
src/authorization/: __init__.py  entities.py
src/bootstrap/: capabilities.py  config.py  extensions.py  logging_config.py  version.py
src/db/: engine.py
src/db/migrations/: env.py
src/db/migrations/versions/: 000_init_db.py  001_users.py  002_tos_accepted.py
src/domain/: role_catalog.py
src/models/: audit_mixin.py  user.py
src/routes/: health.py  roles.py  users.py
src/services/: role_catalog.py  user_service.py
tests/: benchmark.py  conftest.py
tests/fixtures/policies/: role-catalog.json
tests/fixtures/policies/product/: platform.admin.cedar  sponsor.clinical-ops.cedar
tests/integration/: test_container.py
tests/integration/routes/: test_health.py  test_openapi.py
tests/policies/: Dockerfile  cdp_clinician_patient_roster.cedar
tests/policies/user/cedar/: care-episode.cedar  demo.cedar  site.clinical.cedar
tests/unit/: test_app.py  test_role_catalog.py
tests/unit/authorization/: test_entities.py
tests/unit/bootstrap/: test_version.py
tests/unit/routes/: test_health.py  test_users.py
tests/unit/services/: test_user_service.py
